fix visible

--- a/src/sass/components/_favorites.scss
+++ b/src/sass/components/_favorites.scss
@@ -1,16 +1,10 @@
 .favorites {
   text-align: center;
-  height: 1130px;
-  overflow: hidden;
-
-  @media screen and (min-width: 768px) {
-    overflow: visible;
-    height: auto;
-  }
-
-  @media screen and (min-width: 1200px) {
-    overflow: visible;
-  }
+  @media screen and (max-width: $tab) {
+.favorites__item:nth-last-child(-n + 3) {
+display: none;
+}
+}
 }
 
 .favorites__title {
@@ -20,7 +14,7 @@
 .favorites__intro {
   margin-bottom: 60px;
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desk) {
     margin-bottom: 40px;
   }
 }
@@ -32,42 +26,37 @@
   gap: 20px;
   justify-content: center;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tab) {
     gap: 32px;
   }
 }
 
 .favorites__item {
-  // width: 223.29px;
+  width: 280px;
+  height: 282px;
   border: 11px solid $main-color;
-    border-radius: 50%;
+  border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-    padding: 29px;
 
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: $tab) {
+    width: 336px;
+    height: 338px;
     width: calc((100% - 32px) / 2);
-    // max-width: 267.95px;
     background: $primery-color;
     border: 14px solid $main-color;
-    height: 337px;
-    padding: 35px;
+    
   }
 
-  @media screen and (min-width: 1200px) {
+  @media screen and (min-width: $desk) {
+
     width: calc((100% - 64px) / 3);
-    padding: 40px;
+    width: 395px;
     height: 397px;
-    // max-width: 395px;
   }
 }
 
 .favorites__item:hover, .favorites__item:focus {
-  border: 14px solid #BBF330;
+  border: 14px solid $accent-color;
 }
-
-// .favorites__menu {
-// height: 395px;
-// width: 395px;
-// }
